<resources>
    <string name="app_name">Digital Dream</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main_test">MainActivityTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="budget_name">Budget</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="title_activity_avatar_settings">AvatarSettings</string>
    <string name="title_activity_goals_page">goals_page</string>
    <string name="launch_button">Start Budgeting!</string>
    <string name="returnHomeButton">Main</string>
    <string name="goal_name">Enter your goal\'s name</string>
    <string name="button_save">Save</string>
    <string name="link">Link to your goal (Optional)</string>
    <string name="cost">Enter cost of your goal</string>
    <string name="next">Next</string>
    <string name="date_picker">Set a date for completing your goal!</string>
    <string name="gotoGoals">SET A GOAL</string>
    <string name="goToAvatar">SET AVATAR</string>
</resources>
