<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.huongdang.digitaldream.activity_goals_first">

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="108dp"
        android:layout_height="65dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="287dp"
        tools:layout_editor_absoluteY="524dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="39dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:hint="@string/cost"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="224dp"
        android:layout_marginStart="18dp"
        android:layout_above="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/link"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="126dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/goal_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_marginTop="32dp" />
</RelativeLayout>
