<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.huongdang.digitaldream.MainActivity">

    <Button
        android:id="@+id/button9"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/gotoGoals"
        android:layout_marginTop="43dp"
        android:layout_alignTop="@+id/button5"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/launch_button"
        android:layout_marginBottom="112dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="364dp"
        app:srcCompat="@mipmap/rbclogo"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/goToAvatar"
        android:layout_below="@+id/button9"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
